--- a/sp12-config/src/main/resources/application.yml
+++ b/sp12-config/src/main/resources/application.yml
@@ -6,10 +6,17 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/benwang6/sp-config
+          uri: https://github.com/你的名字路径/sp-config
           searchPaths: config
           #username: your-username
           #password: your-password
+    
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+
     
 server:
   port: 6001
@@ -18,3 +25,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
